testsuite/tests/ghc-regress/mdo/should_fail/mdofail005.stderr
mdofail005.hs:10:13: parse error on input `<-'
